--- a/friends/src/index.css
+++ b/friends/src/index.css
@@ -33,7 +33,7 @@ a {
 }
 
 .friends-list-container {
-  margin: 32px 0;
+  margin: 0px;
   padding: 32px;
   background-color: whitesmoke;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
